--- a/Resources/Private/Translations/en/Main.xlf
+++ b/Resources/Private/Translations/en/Main.xlf
@@ -4,6 +4,9 @@
         <header/>
         <body>
             <!-- GENERIC -->
+            <trans-unit id="noAppointments" xml:space="preserve">
+                <source>No appointments created yet.</source>
+            </trans-unit>
             <trans-unit id="terminal" xml:space="preserve">
                 <source>Terminal</source>
             </trans-unit>
@@ -64,9 +67,12 @@
                 <source>Appointment '{0}' was updated.</source>
             </trans-unit>
             <trans-unit id="fm.appointmentRemoved.title" xml:space="preserve">
+                <source>Appointment '{0}' was removed!</source>
+            </trans-unit>
+            <trans-unit id="fm.odAppointmentRemoved.title" xml:space="preserve">
                 <source>Outdated appointment '{0}' was removed!</source>
             </trans-unit>
-            <trans-unit id="fm.appointmentRemoved.message" xml:space="preserve">
+            <trans-unit id="fm.odAppointmentRemoved.message" xml:space="preserve">
                 <source>The appointment has expired on {0}.</source>
             </trans-unit>
             <trans-unit id="fm.imageRemoved.title" xml:space="preserve">
