--- a/Resources/Private/Translations/de/Main.xlf
+++ b/Resources/Private/Translations/de/Main.xlf
@@ -222,6 +222,14 @@ Dias werden nach Dateinamen sortiert. Fahren Sie mit der Maus über die Vorschau
                 <source>Add some text, if required. Line breaks will apply as you set.</source>
                 <target>Füge, wenn benötigt, Text hinzu. Umbrüche erscheinen, wie gesetzt.</target>
             </trans-unit>
+            <trans-unit id="charsLeft" xml:space="preserve">
+                <source>characters left</source>
+                <target>Zeichen verbleibend</target>
+            </trans-unit>
+            <trans-unit id="linesLeft" xml:space="preserve">
+                <source>lines left</source>
+                <target>Zeilen verbleibend</target>
+            </trans-unit>
             <trans-unit id="form.fontColor" xml:space="preserve">
                 <source>Font color</source>
                 <target>Schriftfarbe</target>
@@ -241,6 +249,10 @@ Dias werden nach Dateinamen sortiert. Fahren Sie mit der Maus über die Vorschau
             <trans-unit id="form.participant.salutation" xml:space="preserve">
                 <source>Salutation</source>
                 <target>Anrede</target>
+            </trans-unit>
+            <trans-unit id="form.participant.title" xml:space="preserve">
+                <source>Title</source>
+                <target>Titel</target>
             </trans-unit>
             <trans-unit id="form.participant.name.placeholder" xml:space="preserve">
                 <source>Enter participants name</source>
